--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/_20sdp"
-    tools:context=".MainActivity">
+    tools:context=".RegisterBankDetailsActivity">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imgLogo"
